codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__provider_credentials__tests__provider_key_entry_80.snap
---
source: tui/src/onboarding/provider_credentials.rs
expression: rendered
---
Enter your OpenRouter API key

Save OPENROUTER_API_KEY in:
/home/user/.customcodex/.env

Key: ********

Enter: save and continue · Esc: cancel
